fixed language refs

--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -1474,7 +1474,7 @@
   year   = {1982},
   key    = {Coady and McGinn 1982},
   title  = {On the so-called implosive nasals of Rejang},
-  editor = {Rainer Carle, Martine Heinschke, Peter W. Pink, Christel Rost and Karen Stadlander},
+  editor = {Rainer Carle and Martine Heinschke and Peter W. Pink and Christel Rost and Karen Stadlander},
   booktitle = {GAVA‘: Studies in Austronesian languages and cultures dedicated to Hans Kähler},
   pages = {437-49},
   series = {Veröffentlichungen des Seminars für Indonesische und Südseesprachen der Universität Hamburg},
@@ -1847,7 +1847,7 @@
   year   = {1995},
   key    = {Dyen 1995},
   title  = {Borrowing and inheritance in Austronesianistics},
-  editor = {Paul Jen-kuei Li, Cheng-hwa Tsang, Ying-kuei Huang, Dah-an Ho, and Chiu-yu Tseng},
+  editor = {Paul Jen-kuei Li and Cheng-hwa Tsang and Ying-kuei Huang and Dah-an Ho and Chiu-yu Tseng},
   booktitle = {Austronesian studies relating to Taiwan},
   pages = {455-519},
   series = {Symposium Series of the Institute of History and Philology},
@@ -3099,7 +3099,7 @@
   year   = {1982},
   key    = {Li 1982},
   title  = {Kavalan phonology: synchronic and diachronic},
-  editor = {Rainer Carle, Martina Heinschke, Peter W. Pink, Christel Rost and Karen Stadlander},
+  editor = {Rainer Carle and Martina Heinschke and Peter W. Pink and Christel Rost and Karen Stadlander},
   booktitle = {GAVA‘: Studies in Austronesian languages and cultures dedicated to Hans Kähler: 479-495. Veröffentlichungen des Seminars für Indonesische und Südseesprachen der Universität Hamburg, 17. Monograph series issued through Department of Indonesian and Pacific Island Languages, University of Hamburg},
   address = {Berlin},
   publisher = {Dietrich Reimer}
@@ -4441,7 +4441,7 @@
   year   = {1996},
   key    = {Ross 1996},
   title  = {Pottery terms in Proto Oceanic},
-  editor = {Janet Davidson, Geoffrey Irwin, Foss Leach, Andrew Pawley and Dorothy Brown},
+  editor = {Janet Davidson and Geoffrey Irwin and Foss Leach and Andrew Pawley and Dorothy Brown},
   booktitle = {Oceanic culture history: essays in honour of Roger Green},
   pages = {67-82},
   series = {Special Publication},
