--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -1087,6 +1087,22 @@
   volume = {46},
   pages = {404-423}
 }
+@book{blust2009,
+  key    = {Blust 2009},
+  address               = {Canberra},
+  author                = {Robert A. Blust},
+  pages                 = {xxviii+824},
+  publisher             = {Research School of Pacific and Asian Studies, Australian National University},
+  series                = {Pacific Linguistics},
+  title                 = {The Austronesian Languages},
+  volume                = {602},
+  year                  = {2009},
+  hhtype                = {overview;comparative},
+  inlg                  = {English [eng]},
+  isbn                  = {9780858836020},
+  lgcode                = {Malayo-Polynesian [mala1545]},
+  location              = {Canberra}
+}
 @incollection{blust2010,
   author = {Blust, Robert},
   year   = {2010},
@@ -1415,6 +1431,16 @@
   key    = {Chowning n.d. b},
   title  = {Molima vocabulary},
   howpublished  = {Typescript, 165pp}
+}
+@incollection{chowning2001,
+  author     = {Chowning, Ann},
+  booktitle  = {The boy from Bundaberg. Studies in Melanesian linguistics in honour of Tom Dutton},
+  editor     = {Pawley and Ross and Tryon},
+  pages      = {75-87},
+  title      = {Proto Melanesian plant names reconsidered},
+  year       = {2001},
+  key = {Chowning 2001},
+  inlg       = {English [eng]}
 }
 @book{churchill1913,
   author = {Churchill, William},
@@ -5647,7 +5673,7 @@
   publisher = {Linguistic Society of New Zealand}
 }
 @book{warneck1977,
-  author = {Warneck, Joh},
+  author = {Warneck, Johannes Gustav},
   year   = {1977},
   key    = {Warneck 1977},
   title  = {Toba-Batak-Deutsches Wörterbuch},
