--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -1350,6 +1350,14 @@
   address = {Honolulu},
   publisher = {The University Press of Hawaii}
 }
+@book{cauquelin1991,
+  address   = {Paris},
+  author    = {Cauquelin, Josiane},
+  publisher = {Ecole francaise d'Extreme-Orient},
+  title     = {Dictionnaire puyuma-francais},
+  year      = {1991},
+  key    = {Cauquelin 1991}
+}
 @book{cauquelin2011,
   author = {Cauquelin, Josianne},
   year   = {2011},
@@ -2732,6 +2740,14 @@
   title  = {Melanesians of the South-east Solomon islands},
   address = {New York},
   publisher = {Benjamin Blom}
+}
+@phdthesis{jackson1983,
+  author = {Jackson, F.H},
+  year = {1983},
+  title = {The internal and external relationships of the Trukic languages of Micronesia},
+  school = {University of Hawaii},
+  publisher = {Ann Arbor: University Microfilms International},
+  key = {Jackson 1983}
 }
 @book{jacksonandmarck1991,
   author = {Jackson, Frederick H. and Marck, Jeffrey C.},
@@ -5356,7 +5372,7 @@
  pages = {11-90}
 }
 @book{tsuchidayamadaandmoriguchi1987,
-  author = {Tsuchida, Shigeru. and Yamada, Yukihiro and Moriguchi, Tsunekazu},
+  author = {Tsuchida, Shigeru and Yamada, Yukihiro and Moriguchi, Tsunekazu},
   year   = {1987},
   key    = {Tsuchida, Yamada and Moriguchi 1987},
   title  = {Lists of selected words of Batanic languages},
@@ -5364,9 +5380,9 @@
   publisher = {Department of Linguistics, Faculty of Letters, University of Tokyo}
 }
 @book{tsuchida1991,
-  author = {Tsuchida, Shigeru},
+  editor = {Tsuchida, Shigeru and Y. Yamada and T. Moriguchi},
   year   = {1991},
-  key    = {Tsuchida 1991},
+  key    = {Tsuchida, Yamada and Moriguchi 1991},
   title  = {Linguistic materials of the Formosan sinicized populations, I: Siraya and Basai},
   address = {Tokyo},
   publisher = {Department of Linguistics, The University of Tokyo}
