--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -168,7 +168,7 @@
 }
 @misc{anderbecknd,
   author = {Anderbeck, Karl},
-  key    = {Anderbeck n.d..},
+  key    = {Anderbeck n.d.},
   title  = {Proto-Lampungic reconstructions},
   howpublished  = {Computer file}
 }
@@ -1544,19 +1544,19 @@
 }
 @misc{collinsnd,
   author = {Collins, James T.},
-  key    = {Collins n.d..},
+  key    = {Collins n.d.},
   title  = {Asilulu-English dictionary},
   howpublished  = {Typescript, 189pp}
 }
 @misc{collinsnda,
   author = {Collins, James T.},
-  key    = {Collins n.d. a..},
+  key    = {Collins n.d. a.},
   title  = {Fieldnotes on languages of the central Moluccas},
   howpublished  = {also in Austronesian Basic Vocabulary Database online}
 }
 @misc{collinsndb,
   author = {Collins, James T.},
-  key    = {Collins n.d. b..},
+  key    = {Collins n.d. b.},
   title  = {Fieldnotes on Bonerate}
 }
 @book{collinscollinsandhashim2001,
@@ -2180,7 +2180,7 @@
 }
 @misc{foxnd,
   author = {Fox, James J.},
-  key    = {Fox n.d..},
+  key    = {Fox n.d.},
   title  = {Lexicostatistical lists for 29 languages of the Lesser Sunda islands},
   howpublished  = {Typescript}
 }
@@ -2202,13 +2202,13 @@
 }
 @misc{freemannd,
   author = {Freeman, Derek},
-  key    = {Freeman n.d..},
+  key    = {Freeman n.d.},
   title  = {Iban-Bekatan-Sian vocabulary},
   howpublished  = {Field notebooks}
 }
 @misc{freemannda,
   author = {Freeman, Derek},
-  key    = {Freeman n.d.a..},
+  key    = {Freeman n.d. a.},
   title  = {Iban-Bekatan-Sian vocabulary}
 }
 @book{galis1955,
@@ -2410,7 +2410,7 @@
 }
 @misc{gracend,
   author = {Grace, George W.},
-  key    = {Grace n.d..},
+  key    = {Grace n.d.},
   title  = {Fieldnotes on Austronesian languages of western New Guinea}
 }
 @incollection{greenandpawley1999,
@@ -2555,7 +2555,7 @@
 }
 @misc{hendricksonetalnd,
   author = {Hendrickson, Gail and Melvin, Missy and Edep, Josenita L. and Caabay, Marilyn A.},
-  key    = {Hendrickson et al. n.d..},
+  key    = {Hendrickson et al. n.d.},
   title  = {Agutaynen-English dictionary},
   howpublished  = {Computer file, privately circulated}
 }
@@ -2592,7 +2592,7 @@
 @book{hohulinhohulinandmaddawat2018,
   author = {Hohulin, Richard M. and Hohulin, E. Lou and Maddawat, Alberto K.},
   year   = {2018},
-  key    = {Hohulin, Hohulin and Maddawat 2018},
+  key    = {Hohulin 2018},
   title  = {Keley-i dictionary and grammar sketch},
   address = {Manila},
   publisher = {Linguistic Society of the Philippines}
@@ -2695,7 +2695,7 @@
 }
 @misc{hughesnd,
   author = {Hughes, Jock},
-  key    = {Hughes n.d..},
+  key    = {Hughes n.d.},
   title  = {Unpublished wordlist of Dobel (Aru islands) done for the Intercontinental Dictionary Series}
 }
 @incollection{hutchissonandhutchisson1975,
@@ -3179,7 +3179,7 @@
 }
 @misc{lind,
   author = {Li, Paul Jen-kuei},
-  key    = {Li n.d..},
+  key    = {Li n.d.},
   title  = {‘Animals and plants for Proto-Austronesian speakers’},
   howpublished  = {Ms., 16pp.]}
 }
@@ -3313,6 +3313,14 @@
   address = {The Hague},
   publisher = {Martinus Nijhoff}
 }
+@phdthesis{lobel2013,
+  author = {Lobel, Jason William},
+  year = {2013},
+  key = {Lobel 2013}
+  title = {Philippine and North Bornean languages: Issues in description, subgrouping, and reconstruction},
+  address = {Honolulu},
+  school = {Department of Linguistics, University of Hawaii}
+}		
 @book{lobel2016,
   author = {Lobel, Jason William},
   year   = {2016},
@@ -3332,7 +3340,7 @@
 }
 @misc{lobelnd,
   author = {Lobel, Jason William},
-  key    = {Lobel n.d..},
+  key    = {Lobel n.d.},
   title  = {Comparative vocabulary of Palawanic languages},
   howpublished  = {Ms., 87pp}
 }
@@ -4183,7 +4191,7 @@
 }
 @misc{picknd,
   author = {Pick, Andrew},
-  key    = {Pick n.d..},
+  key    = {Pick n.d.},
   title  = {Proto-Batanic *L: a clue to the linguistic history of the Philippines},
   howpublished = {Ms., 32pp}
 }
@@ -4267,7 +4275,7 @@
 }
 @misc{quackenbushnd,
   author = {Quackenbush, Steve},
-  key    = {Quackenbush n.d..},
+  key    = {Quackenbush n.d.},
   title  = {Agutaynen dictionary},
   note   = {rough draft}
 }
@@ -4669,13 +4677,13 @@
 }
 @misc{rossnda,
   author = {Ross, Malcolm D.},
-  key    = {Ross n.d. a..},
+  key    = {Ross n.d. a.},
   title  = {Swadesh lists for languages of western Melanesia},
   howpublished  = {in Austronesian Basic Vocabulary Database online}
 }
 @misc{rossndb,
   author = {Ross, Malcolm D.},
-  key    = {Ross n.d. b..},
+  key    = {Ross n.d. b.},
   title  = {Bali (Uneapa) vocabulary},
   note   = {collected from Barbara Gili, Goroka Teachers’ College}
 }
@@ -4817,7 +4825,7 @@
 }
 @misc{rousseaund,
   author = {Rousseau, Jérôme},
-  key    = {Rousseau n.d..},
+  key    = {Rousseau n.d.},
   title  = {Lahanan-English vocabulary},
   howpublished = {Ms}
 }
@@ -4832,7 +4840,7 @@
 }
 @misc{ruchnd,
   author = {Ruch, Edward},
-  key    = {Ruch n.d..},
+  key    = {Ruch n.d.},
   title  = {Kalamian Tagbanwa vocabulary of forms containing /k/},
   howpublished = {Typescript, 28pp. Supplied courtesy of R. David Zorc}
 }
@@ -4874,6 +4882,11 @@
   key    = {Sandin 1967},
   title  = {The Sea Dayaks of Borneo before white rajah rule},
   publisher = {Michigan State University Press}
+}
+@misc{satond,
+  author = {Sato, Hiroko},
+  key = {Sato n.d.},
+  title = {Notes from Anastasia Vuluku Kaue from Makiri village}
 }
 @book{savage1980,
   author = {Savage, Stephen},
@@ -4987,20 +5000,21 @@
   address = {Jakarta},
   publisher = {Pusat Pembinaan dan Pengembangan Bahasa}
 }
-@phdthesis{smith2017,
+@phdthesis{smith2017a,
   author = {Smith, Alexander D.},
   year   = {2017},
-  key    = {Smith 2017},
+  key    = {Smith 2017a},
   title  = {The languages of Borneo: a comprehensive classification},
   address = {Honolulu},
   publisher = {Department of Linguistics, University of Hawai’i}
 }
-@misc{smithnd,
+@article{smith2017b,
   author = {Smith, Alexander D.},
-  key    = {Smith n.d..},
+  key    = {Smith 2017b},
   title  = {The Western Malayo-Polynesian problem},
-  series = {Term paper in Linguistics},
-  volume = {770 , ‘Survey of the Austronesian language family’, Fall, 2014}
+  journal = {Oceanic Linguistics},
+  volume = {56.2}
+  pages = {435-489
 }
 @book{smits1992,
   author = {Smits, L. and C.L. Voorhoeve},
@@ -5217,6 +5231,15 @@
   series = {PL},
   volume = {C58}
 }
+@book{Thieberger2021,
+  author = {Thieberger, Nick},
+  year = {2021},
+  key = {Thieberger 2021},
+  title = {A dictionary of Nafsan, South Efate, Vanuatu},
+  series = {Oceanic Linguistics Special Publications No. 41},
+  address = {Honolulu},
+  publisher = {University of Hawaii Press}
+}
 @book{thiessen1981,
   author = {Thiessen, Henry Arnold},
   year   = {1981},
@@ -5374,7 +5397,7 @@
 @book{tsuchidayamadaandmoriguchi1987,
   author = {Tsuchida, Shigeru and Yamada, Yukihiro and Moriguchi, Tsunekazu},
   year   = {1987},
-  key    = {Tsuchida, Yamada and Moriguchi 1987},
+  key    = {Tsuchida 1987},
   title  = {Lists of selected words of Batanic languages},
   address = {Tokyo},
   publisher = {Department of Linguistics, Faculty of Letters, University of Tokyo}
@@ -5382,7 +5405,7 @@
 @book{tsuchida1991,
   editor = {Tsuchida, Shigeru and Y. Yamada and T. Moriguchi},
   year   = {1991},
-  key    = {Tsuchida, Yamada and Moriguchi 1991},
+  key    = {Tsuchida Yamada and Moriguchi 1991},
   title  = {Linguistic materials of the Formosan sinicized populations, I: Siraya and Basai},
   address = {Tokyo},
   publisher = {Department of Linguistics, The University of Tokyo}
@@ -5508,8 +5531,8 @@
 }
 @misc{vandierendoncknd,
   author = {van Dierendonck, Martine},
-  year   = {n.d..},
-  key    = {van Dierendonck n.d..},
+  year   = {n.d.},
+  key    = {van Dierendonck n.d.},
   title  = {Unpublished wordlists on languages of Flores (1,047 items)}
 }
 @book{vanhasseltandvanhasselt1947,
@@ -5736,7 +5759,7 @@
 @misc{whitekokhonigitaandpulomana1985,
   author = {White, Geoffrey M. and Kokhonigita, Francis and Pulomana, Hugo},
   year   = {1985},
-  key    = {White, Kokhonigita and Pulomana 1985},
+  key    = {White 1985},
   title  = {Cheke Holo dictionary},
   note  = {2 vols},
   howpublished = {Typescript, 678pp}
