--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -5662,6 +5662,17 @@
   address = {Jakarta},
   publisher = {Universitas Atma Jaya}
 }
+@book{walker1975,
+  author = {Walker, Dale F.},
+  year = {1975},
+  key = {Walker 1975},
+  title = {A lexical study of Lampung dialects},
+  editor = {Verhaar, John W.M.},
+  booktitle = {Miscellaneous studies in Indonesian and languages in Indonesia Part 1},
+  pages = {11-22},
+  address = {Jakarta},
+  publisher = {Universitas Katolik Indonesia Atma Jaya}
+}
 @book{walker1976,
   author = {Walker, Dale F.},
   year   = {1976},
