--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -5010,11 +5010,21 @@
 }
 @article{smith2017b,
   author = {Smith, Alexander D.},
+  year = {2017},
   key    = {Smith 2017b},
   title  = {The Western Malayo-Polynesian problem},
   journal = {Oceanic Linguistics},
   volume = {56.2}
   pages = {435-489
+}
+@article{smith2019a}
+  author = {Smith, Alexander D.},
+  year = {2019},
+  key = {Smith 2019a},
+  title = {A reconstruction of Proto-Segai-Modang},
+  journal = {Oceanic Linguistics},
+  volume = {58.2},
+  pages = {353-385}
 }
 @book{smits1992,
   author = {Smits, L. and C.L. Voorhoeve},
