--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -3846,6 +3846,12 @@
   title  = {A Bunun vocabulary: a language of Formosa},
   howpublished  = {Typescript, 494pp. Privately circulated}
 }
+@misc{Nivensnd,
+  author = {Nivens, Richard},
+  key = {Nivens n.d.}
+  title = {Toward reconstructing an immediate ancestor of the languages of Aru},
+  hoepublished = {Unpublished ms.}
+  }
 @book{nothofer1975,
   author = {Nothofer, Bernd},
   year   = {1975},
