--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -5023,7 +5023,7 @@
   volume = {56.2}
   pages = {435-489
 }
-@article{smith2019a}
+@article{smith2019a,
   author = {Smith, Alexander D.},
   year = {2019},
   key = {Smith 2019a},
@@ -5031,6 +5031,14 @@
   journal = {Oceanic Linguistics},
   volume = {58.2},
   pages = {353-385}
+}
+@incollection{smith2020a,
+  author = {Smith, Alexander D.},
+  year = {2020},
+  key = {Smith modang archive 2020},
+  title = {ADS1-001},
+  booktitle = {Modang Wahau and Woq Helaq word list},
+  url = {http://hdl.handle.net/10125/70562}
 }
 @book{smits1992,
   author = {Smits, L. and C.L. Voorhoeve},
