--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -5020,8 +5020,17 @@
   key    = {Smith 2017b},
   title  = {The Western Malayo-Polynesian problem},
   journal = {Oceanic Linguistics},
-  volume = {56.2}
-  pages = {435-489
+  volume = {56.2},
+  pages = {435-489}
+}
+@article{smith2017c,
+  author = {Smith, Alexander D.},
+  year = {2017},
+  key = {Smith 2017 merap},
+  title = {Merap historical phonology in the context of a Central Bornean linguistic area},
+  journal = {Oceanic Linguistics},
+  volume = {56.1},
+  pages = {143-180}
 }
 @article{smith2019a,
   author = {Smith, Alexander D.},
