status reflecting legacy ACD online

--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -3316,11 +3316,11 @@
 @phdthesis{lobel2013,
   author = {Lobel, Jason William},
   year = {2013},
-  key = {Lobel 2013}
+  key = {Lobel 2013},
   title = {Philippine and North Bornean languages: Issues in description, subgrouping, and reconstruction},
   address = {Honolulu},
   school = {Department of Linguistics, University of Hawaii}
-}		
+}
 @book{lobel2016,
   author = {Lobel, Jason William},
   year   = {2016},
@@ -3848,7 +3848,7 @@
 }
 @misc{Nivensnd,
   author = {Nivens, Richard},
-  key = {Nivens n.d.}
+  key = {Nivens n.d.},
   title = {Toward reconstructing an immediate ancestor of the languages of Aru},
   hoepublished = {Unpublished ms.}
   }
@@ -5430,7 +5430,7 @@
 @book{tsuchidayamadaandmoriguchi1987,
   author = {Tsuchida, Shigeru and Yamada, Yukihiro and Moriguchi, Tsunekazu},
   year   = {1987},
-  key    = {Tsuchida 1987},
+  key    = {Tsuchida, Yamada and Moriguchi 1987},
   title  = {Lists of selected words of Batanic languages},
   address = {Tokyo},
   publisher = {Department of Linguistics, Faculty of Letters, University of Tokyo}
