--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -6733,3 +6733,13 @@
     title = {Molbog},
     year = {1995}
 }
+
+@InCollection{Chen2004,
+  author    = {Chen, {Chun-Mei}},
+  title     = {Phonetic Structures of {P}aiwan},
+  booktitle = {Proceedings of the 11th meeting of the {A}ustronesian {Formal} {Linguistics} {Association} ({AFLA} 11)},
+  publisher = {Berlin: Zentrum Für Allegemeine Sprachwissenschaft, Typologie und Universalienforschung (ZAS)},
+  year      = {2004},
+  editor    = {Paul Law},
+  pages     = {30-44},
+}
