--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -6734,7 +6734,7 @@
     year = {1995}
 }
 
-@InCollection{Chen2004,
+@InCollection{chen2004,
   author    = {Chen, {Chun-Mei}},
   title     = {Phonetic Structures of {P}aiwan},
   booktitle = {Proceedings of the 11th meeting of the {A}ustronesian {Formal} {Linguistics} {Association} ({AFLA} 11)},
