add doublet/disjunct sets

--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -1550,13 +1550,13 @@
 }
 @misc{collinsnda,
   author = {Collins, James T.},
-  key    = {Collins n.d. a.},
+  key    = {Collins n.d. a},
   title  = {Fieldnotes on languages of the central Moluccas},
   howpublished  = {also in Austronesian Basic Vocabulary Database online}
 }
 @misc{collinsndb,
   author = {Collins, James T.},
-  key    = {Collins n.d. b.},
+  key    = {Collins n.d. b},
   title  = {Fieldnotes on Bonerate}
 }
 @book{collinscollinsandhashim2001,
@@ -4683,13 +4683,13 @@
 }
 @misc{rossnda,
   author = {Ross, Malcolm D.},
-  key    = {Ross n.d. a.},
+  key    = {Ross n.d. a},
   title  = {Swadesh lists for languages of western Melanesia},
   howpublished  = {in Austronesian Basic Vocabulary Database online}
 }
 @misc{rossndb,
   author = {Ross, Malcolm D.},
-  key    = {Ross n.d. b.},
+  key    = {Ross n.d. b},
   title  = {Bali (Uneapa) vocabulary},
   note   = {collected from Barbara Gili, Goroka Teachers’ College}
 }
@@ -5717,7 +5717,7 @@
 @book{walkernd,
   author = {Walker, Dale F.},
   year   = {None},
-  key    = {Walker nd},
+  key    = {Walker n.d.},
   title  = {A lexical study of Lampung dialects},
   series = {NUSA, Part I},
  pages = {11-21}
