added sources referenced in form descriptions

--- a/etc/sources.bib
+++ b/etc/sources.bib
@@ -2005,6 +2005,22 @@
   address = {Quezon City, Philippines},
   publisher = {Congregation of the Most Holy Redeemer}
 }
+@book{chinnery1927,
+  address    = {Melbourne},
+  author     = {E. W. P. Chinnery},
+  pages      = {93-238},
+  publisher  = {H. J. Green, Government Printer},
+  key = {Chinnery 1927},
+  series     = {Territory of New Guinea Anthropological Report},
+  title      = {Notes on the natives of E Mira and St.~Matthias},
+  volume     = {2},
+  year       = {1927},
+  hhtype     = {ethnographic;wordlist},
+  inlg       = {English [eng]},
+  lgcode     = {Mussau-Emira [emi]},
+  macro_area = {Papunesia},
+  src        = {hh}
+}
 @book{esser1927,
   author = {Esser, S.J.},
   year   = {1927},
@@ -2024,6 +2040,13 @@
   volume = {43},
   address = {The Hague},
   publisher = {Martinus Nijhoff}
+}
+@book{evans1923,
+  author = {Ivor H. N. Evans},
+  key = {Evans 1923},
+  title = {Studies in Religion, Folk-Lore, & Customs in British North Borneo and the Malay Peninsula},
+  publisher = {Cambridge University Press},
+  address = {Cambridge},
 }
 @misc{ezard1985,
   author = {Ezard, Brian},
@@ -3182,6 +3205,22 @@
   key    = {Li n.d.},
   title  = {‘Animals and plants for Proto-Austronesian speakers’},
   howpublished  = {Ms., 16pp.]}
+}
+@incollection{li2004,
+  address    = {Taipei, Taiwan},
+  author     = {Li, Paul Jen-Kuei},
+  booktitle  = {Selected Papers on Formosan Languages},
+  editor     = {Li, Paul Jen-Kuei},
+  key = {Li 2004},
+  pages      = {1483-1532},
+  publisher  = {Institute of Linguistics, Academia Sinica},
+  title      = {Basic Vocabulary for Formosan Languages and Dialects},
+  year       = {2004},
+  hhtype     = {wordlist},
+  inlg       = {English [eng]},
+  lgcode     = {Sqoleq = Atayal [tay], Skikun, Mayrinax = Atayal [tay], Paran = Taroko [trv], Toda = Taroko [trv], Hecuo = Taroko [trv], Taroko = Taroko [trv], Tsou-Duhtu = Tsou [tsu], Kanakanavu = Kanakanabu [xnb], Saaroa [sxr], Rukai [dru], Tanan = Rukai [dru], Budai = Rukai [dru], Maga = Rukai [dru], Tona = Rukai [dru], Mantauran = Rukai [dru], N Bunun = Takituduh = Bunun [bnn], C Bunun = Takbanuaz = Bunun [bnn], S Bunun = Isbukun = Bunun [bnn], Paiwan = Paiwan [pwn], Butanglu = Paiwan [pwn], Stimul = Paiwan [pwn], Tjubar = Paiwan [pwn], Puyuma [pyu], Pilam = Puyuma [pyu], Lower Pinlang = Puyuma [pyu], Katipul = Puyuma [pyu], Thao [ssf], Tungho = Saisiyat [xsy], Ta'ay = Saisiyat [xsy], Pazih = Pazeh [pzh], Fata'an = Amis [ami], Farang = Amis [ami], Sakizaya [szy], Kavalan = Kavalan [ckv]},
+  macro_area = {Papunesia},
+  src        = {hh}
 }
 @book{liandtsuchida2001,
   author = {Li, Paul Jen-kuei and Tsuchida, Shigeru},
