--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -1720,13 +1720,13 @@
 @misc{collinsnda,
     author = {Collins, James T.},
     howpublished = {also in Austronesian Basic Vocabulary Database online},
-    key = {Collins n.d. a.},
+    key = {Collins n.d. a},
     title = {Fieldnotes on languages of the central Moluccas}
 }
 
 @misc{collinsndb,
     author = {Collins, James T.},
-    key = {Collins n.d. b.},
+    key = {Collins n.d. b},
     title = {Fieldnotes on Bonerate}
 }
 
@@ -2225,6 +2225,23 @@
     year = {1986}
 }
 
+@book{chinnery1927,
+    author = {Chinnery, E. W. P.},
+    address = {Melbourne},
+    hhtype = {ethnographic;wordlist},
+    inlg = {English [eng]},
+    key = {Chinnery 1927},
+    lgcode = {Mussau-Emira [emi]},
+    macro_area = {Papunesia},
+    pages = {93-238},
+    publisher = {H. J. Green, Government Printer},
+    series = {Territory of New Guinea Anthropological Report},
+    src = {hh},
+    title = {Notes on the natives of E Mira and St.~Matthias},
+    volume = {2},
+    year = {1927}
+}
+
 @book{esser1927,
     author = {Esser, S.J.},
     address = {Leiden},
@@ -2245,6 +2262,14 @@
     title = {De Uma-taal (West Midden-Celebes): Spraakkunstige schets en teksten. Uitgegeven en van een woordenlijst voorzien door Dr. J. Noorduyn},
     volume = {43},
     year = {1964}
+}
+
+@book{evans1923,
+    author = {Evans, Ivor H. N.},
+    address = {Cambridge},
+    key = {Evans 1923},
+    publisher = {Cambridge University Press},
+    title = {Studies in Religion, Folk-Lore, & Customs in British North Borneo and the Malay Peninsula}
 }
 
 @misc{ezard1985,
@@ -3534,6 +3559,23 @@
     howpublished = {Ms., 16pp.]},
     key = {Li n.d.},
     title = {‘Animals and plants for Proto-Austronesian speakers’}
+}
+
+@incollection{li2004,
+    author = {Li, Paul Jen-Kuei},
+    editor = {Li, Paul Jen-Kuei},
+    address = {Taipei, Taiwan},
+    booktitle = {Selected Papers on Formosan Languages},
+    hhtype = {wordlist},
+    inlg = {English [eng]},
+    key = {Li 2004},
+    lgcode = {Sqoleq = Atayal [tay], Skikun, Mayrinax = Atayal [tay], Paran = Taroko [trv], Toda = Taroko [trv], Hecuo = Taroko [trv], Taroko = Taroko [trv], Tsou-Duhtu = Tsou [tsu], Kanakanavu = Kanakanabu [xnb], Saaroa [sxr], Rukai [dru], Tanan = Rukai [dru], Budai = Rukai [dru], Maga = Rukai [dru], Tona = Rukai [dru], Mantauran = Rukai [dru], N Bunun = Takituduh = Bunun [bnn], C Bunun = Takbanuaz = Bunun [bnn], S Bunun = Isbukun = Bunun [bnn], Paiwan = Paiwan [pwn], Butanglu = Paiwan [pwn], Stimul = Paiwan [pwn], Tjubar = Paiwan [pwn], Puyuma [pyu], Pilam = Puyuma [pyu], Lower Pinlang = Puyuma [pyu], Katipul = Puyuma [pyu], Thao [ssf], Tungho = Saisiyat [xsy], Ta'ay = Saisiyat [xsy], Pazih = Pazeh [pzh], Fata'an = Amis [ami], Farang = Amis [ami], Sakizaya [szy], Kavalan = Kavalan [ckv]},
+    macro_area = {Papunesia},
+    pages = {1483-1532},
+    publisher = {Institute of Linguistics, Academia Sinica},
+    src = {hh},
+    title = {Basic Vocabulary for Formosan Languages and Dialects},
+    year = {2004}
 }
 
 @book{liandtsuchida2001,
@@ -5196,13 +5238,13 @@
 @misc{rossnda,
     author = {Ross, Malcolm D.},
     howpublished = {in Austronesian Basic Vocabulary Database online},
-    key = {Ross n.d. a.},
+    key = {Ross n.d. a},
     title = {Swadesh lists for languages of western Melanesia}
 }
 
 @misc{rossndb,
     author = {Ross, Malcolm D.},
-    key = {Ross n.d. b.},
+    key = {Ross n.d. b},
     note = {collected from Barbara Gili, Goroka Teachers’ College},
     title = {Bali (Uneapa) vocabulary}
 }
@@ -6347,7 +6389,7 @@
 
 @book{walkernd,
     author = {Walker, Dale F.},
-    key = {Walker nd},
+    key = {Walker n.d.},
     pages = {11-21},
     series = {NUSA, Part I},
     title = {A lexical study of Lampung dialects},
